Added some changes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<body>
-		<h1>May the force be with you!!- Master Yoda</h1>
+		<h1>May the force be with you!!- Master of the universe</h1>
 		<h2>Luke Skywalker is here!</h2>
 	</body>
 </html>
